--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- item list -->
     <ul id="item-list" class="collection">
-      <li class="collection-item" id="item-0">
+      <!-- <li class="collection-item" id="item-0">
         <strong>Steak Dinner: </strong> <em>1200 Calories</em>
         <a href="" class="secondary-content">
           <i class="fas fa-edit right"></i>
@@ -66,7 +66,7 @@
         <a href="" class="secondary-content">
           <i class="fas fa-edit right"></i>
         </a>
-      </li>
+      </li> -->
     </ul>
   </div>
 
