--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
       <!-- <li class="collection-item" id="item-0">
         <strong>Steak Dinner: </strong> <em>1200 Calories</em>
         <a href="" class="secondary-content">
-          <i class="fas fa-edit right"></i>
+          <i class="edit-item fas fa-edit right"></i>
         </a>
       </li>
       <li class="collection-item" id="item-0">
         <strong>Pizza: </strong> <em>1500 Calories</em>
         <a href="" class="secondary-content">
-          <i class="fas fa-edit right"></i>
+          <i class="edit-item fas fa-edit right"></i>
         </a>
       </li>
       <li class="collection-item" id="item-0">
         <strong>Cookie: </strong> <em>400 Calories</em>
         <a href="" class="secondary-content">
-          <i class="fas fa-edit right"></i>
+          <i class="edit-item fas fa-edit right"></i>
         </a>
       </li> -->
     </ul>
