show edit item on form

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               <label for="item-calories">Calories</label>
             </div>
             <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i> Add Meal</button>
-            <!-- <button class="update-btn btn orange"><i class="fas fa-edit"></i> Update Meal</button>
-            <button class="remove-btn btn red"><i class="fas fa-minus-circle"></i> Remove Meal</button> -->
+            <button class="update-btn btn orange"><i class="fas fa-edit"></i> Update Meal</button>
+            <button class="remove-btn btn red"><i class="fas fa-minus-circle"></i> Remove Meal</button>
             <button class="return-btn btn grey right"><i class="fas fa-chevron-circle-left"></i> Back</button>
           </div>
         </form>
